# jsonrpc3

./: SPEC.md
.github/workflows/: test.yml
go/jsonrpc3/: auto_client.go  auto_server.go  auto_test.go  batch.go  batch_local_test.go  batch_test.go  bidirectional_test.go  caller.go  caller_test.go  cbor_compact.go  cbor_compact_test.go  cbor_test.go  encoding.go  encoding_test.go  enhanced.go  enhanced_integration_test.go  enhanced_test.go  example_remoteobject_test.go  examples_test.go  go.mod  go.sum  handler.go  handler_test.go  helpers.go  helpers_test.go  http2_client.go  http2_server.go  http2_test.go  http_client.go  http_client_test.go  http_integration_test.go  http_server.go  http_server_test.go  http_sse_test.go  integration_test.go  introspection_test.go  jsonrpc3.go  jsonrpc3_test.go  lifecycle_test.go  mimetype.go  (+22 more)
py/: .gitignore  README.md  pyproject.toml
py/examples/: basic.py
py/src/jsonrpc3/: __init__.py  batch.py  encoding.py  errors.py  handler.py  helpers.py  http_client.py  http_server.py  params.py  peer.py  protocol.py  session.py  types.py  websocket_client.py  websocket_server.py
py/tests/: test_basic.py  test_batch.py  test_cross_language.py  test_http.py  test_peer.py  test_websocket.py
ruby/: .gitignore  jsonrpc3.gemspec  test_ws_manual.rb
ruby/examples/: basic.rb  method_introspection.rb  reference_convenience.rb
ruby/lib/: jsonrpc3.rb
ruby/test/: basic_test.rb  batch_test.rb  cross_language_test.rb  http_test.rb  test_helper.rb  websocket_test.rb
ts/: README.md  build.ts  package.json  tsconfig.json
ts/examples/: peer.ts  (+1 more)
(+45 files in other folders)
